# nexus

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh  lefthook.yml
.github/workflows/: ci.yml  docs.yml  release.yml
Formula/: nexus.rb
crates/ai/: Cargo.toml
crates/ai/src/: claude.rs  context.rs  lib.rs  queries.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: ask.rs  changes.rs  config.rs  daemon.rs  mcp.rs  mod.rs  scan.rs  search.rs  stats.rs
crates/configs/: Cargo.toml
crates/configs/src/: backup.rs  diff.rs  export.rs  lib.rs  profile.rs  registry.rs  scanner.rs  tests.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  db.rs  error.rs  lib.rs  models.rs  output.rs  ports.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: indexer.rs  lib.rs  scanner.rs  searcher.rs  tests.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  routes.rs  static_files.rs  tests.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs
crates/tui/src/screens/: changes.rs  configs.rs  mod.rs  overview.rs  search.rs
crates/watcher/: Cargo.toml
crates/watcher/src/: daemon.rs  lib.rs  tests.rs  watcher.rs
docs/book/: book.toml
docs/book/src/: SUMMARY.md  api.md  architecture.md  cli.md  configuration.md  contributing.md  crates.md  database.md  decisions.md  installation.md  introduction.md  quickstart.md  testing.md  tui.md
docs/design/: architecture.md  decisions.md
docs/plans/: phase-0-foundation.md  roadmap.md  sprint-current.md
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  format.ts
frontend/src/lib/components/: Nav.svelte  StatCard.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/configs/: +page.svelte
frontend/src/routes/search/: +page.svelte
