[workspace]
resolver = "2"
members = [
    # ─── Core ───
    "crates/core",
    # ─── Feature Crates ───
    "crates/discovery",
    "crates/configs",
    "crates/watcher",
    "crates/ai",
    # ─── Surfaces ───
    "crates/cli",
    "crates/tui",
    "crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Mehdi Baneshi <mehdi@mbaneshi.click>"]
repository = "https://github.com/mbaneshi/nexus"

[workspace.dependencies]
# Foundation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
color-eyre = "0.6"
chrono = { version = "0.4", features = ["serde"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "backup", "functions"] }

# Config
toml = "0.8"
dirs = "6"

# Discovery
ignore = "0.4"
blake3 = "1"
flate2 = "1"

# Preview / Syntax
syntect = "5"

# Watcher
notify = "8"

# AI
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive", "env", "unicode"] }
indicatif = "0.17"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Server
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "fs"] }
rust-embed = { version = "8", features = ["axum"] }

# Workspace crate references
nexus-core = { path = "crates/core" }
nexus-discovery = { path = "crates/discovery" }
nexus-configs = { path = "crates/configs" }
nexus-watcher = { path = "crates/watcher" }
nexus-ai = { path = "crates/ai" }
nexus-tui = { path = "crates/tui" }
nexus-server = { path = "crates/server" }
