[package]
name = "nexus-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core types, database, config, and error handling for Nexus"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
