[package]
name = "nexus-discovery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Home directory scanner, indexer, and FTS5 searcher"

[dependencies]
nexus-core = { workspace = true }
ignore = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
