[package]
name = "nexus-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Axum REST API server for Nexus with embedded SvelteKit frontend"

[dependencies]
nexus-core = { workspace = true }
nexus-discovery = { workspace = true }
nexus-configs = { workspace = true }
nexus-ai = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
