[package]
name = "nexus-watcher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Filesystem watcher daemon with auto-snapshots"

[dependencies]
nexus-core = { workspace = true }
notify = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
